--- a/readme
+++ b/readme
@@ -3,5 +3,5 @@ file .env в mail облаке в папке /projects/terfam
 
 https://proghunter.ru/articles/django-base-2023-installing-postgresql-in-django     - подключаем базу postgresql к django
 https://metanit.com/sql/postgresql/ -postgresql
-https://metanit.com/python/django/
+https://metanit.com/python/django/ - django
 
