--- a/readme
+++ b/readme
@@ -5,3 +5,5 @@ https://proghunter.ru/articles/django-base-2023-installing-postgresql-in-django 
 https://metanit.com/sql/postgresql/ -postgresql
 https://metanit.com/python/django/ - django
 
+https://pythonclass.ru/django/modeli-v-django/  - Аргументы, доступные для  типов полей Django
+
