--- a/readme
+++ b/readme
@@ -6,4 +6,5 @@ https://metanit.com/sql/postgresql/ -postgresql
 https://metanit.com/python/django/ - django
 
 https://pythonclass.ru/django/modeli-v-django/  - Аргументы, доступные для  типов полей Django
+https://pythonist.ru/kastomizacziya-admin-paneli-django/?ysclid=lqm7bxc70516260594#Setting%20Up%20the%20Django%20Admin  - кастомизация панели управления
 
