--- a/readme
+++ b/readme
@@ -8,5 +8,5 @@ https://metanit.com/python/django/ - django
 https://pythonclass.ru/django/modeli-v-django/  - Аргументы, доступные для  типов полей Django
 https://pythonist.ru/kastomizacziya-admin-paneli-django/?ysclid=lqm7bxc70516260594#Setting%20Up%20the%20Django%20Admin  - кастомизация панели управления
 
-https://www.askpython.com/python/examples/file-variable-in-python - удалить вечером- это для расширения кругозора
+https://djangodoc.ru/3.1/howto/static-files/ - настройка статических файлов в режиме разработки
 
