--- a/readme
+++ b/readme
@@ -10,3 +10,5 @@ https://pythonist.ru/kastomizacziya-admin-paneli-django/?ysclid=lqm7bxc705162605
 
 https://djangodoc.ru/3.1/howto/static-files/ - настройка статических файлов в режиме разработки
 
+https://developer.mozilla.org/ru/docs/Learn/Server-side/Django/Forms -вечером удалить?
+
