--- a/readme
+++ b/readme
@@ -9,6 +9,7 @@ https://pythonclass.ru/django/modeli-v-django/  - Аргументы, досту
 https://pythonist.ru/kastomizacziya-admin-paneli-django/?ysclid=lqm7bxc70516260594#Setting%20Up%20the%20Django%20Admin  - кастомизация панели управления
 
 https://djangodoc.ru/3.1/howto/static-files/ - настройка статических файлов в режиме разработки
+https://gist.github.com/izznogooood/207271d5b3445c508f553a0003feab13  - formData js то django
 
 https://developer.mozilla.org/ru/docs/Learn/Server-side/Django/Forms -вечером удалить?
 
