--- a/readme
+++ b/readme
@@ -12,5 +12,5 @@ https://djangodoc.ru/3.1/howto/static-files/ - настройка статиче
 https://gist.github.com/izznogooood/207271d5b3445c508f553a0003feab13  - formData js то django
 
 https://developer.mozilla.org/ru/docs/Learn/Server-side/Django/Forms -вечером удалить?
-https://runebook.dev/ru/docs/django/ref/models/querysets - Интересно про queySet
+https://pythonist.ru/django-optimizacziya-raboty-s-bazoj-dannyh/?ysclid=lqow9f8bxq345333486 - Интересно про queySet
 
