--- a/readme
+++ b/readme
@@ -16,4 +16,4 @@ https://pythonist.ru/django-optimizacziya-raboty-s-bazoj-dannyh/?ysclid=lqow9f8b
 https://djangodoc.ru/3.1/ref/models/querysets/ - и это тоже querySet
 
 https://www.geeksforgeeks.org/how-to-enable-cors-headers-in-your-django-project/- проблема CORS (покрайней мере get запросы стали работать!!!)
-
+https://github.com/adamchainz/django-cors-headers - более сложная настройка CORS в DJANGO
