--- a/readme
+++ b/readme
@@ -27,3 +27,4 @@ https://habr.com/ru/articles/711954/ - scss в Django
 https://proproprogs.ru/django/podklyuchenie-staticheskih-faylov-filtry-shablonov
 
 https://djbook.ru/rel3.0/ref/templates/builtins.html#ref-templates-builtins-filters - фильтры вывода переменных в шаблонах
+https://proproprogs.ru/django/podklyuchenie-staticheskih-faylov-filtry-shablonov - видео обучающее по django
