--- a/readme
+++ b/readme
@@ -28,3 +28,6 @@ https://proproprogs.ru/django/podklyuchenie-staticheskih-faylov-filtry-shablonov
 
 https://djbook.ru/rel3.0/ref/templates/builtins.html#ref-templates-builtins-filters - фильтры вывода переменных в шаблонах
 https://proproprogs.ru/django/podklyuchenie-staticheskih-faylov-filtry-shablonov - видео обучающее по django
+
+https://reactsvgicons.com/react-svg-iconsets   - иконки react(svg)
+https://tproger.ru/articles/principy-solid-python?ysclid=lqqwlxpio6340700304 - pattern в PYTHON
