--- a/readme
+++ b/readme
@@ -32,3 +32,5 @@ https://proproprogs.ru/django/podklyuchenie-staticheskih-faylov-filtry-shablonov
 https://reactsvgicons.com/react-svg-iconsets   - иконки react(svg)
 https://tproger.ru/articles/principy-solid-python?ysclid=lqqwlxpio6340700304 - pattern в PYTHON
 
+https://questu.ru/articles/254359/?ysclid=lqv9c6b6ce980048864  - об регистрации пользователя на сайте
+
