--- a/readme
+++ b/readme
@@ -33,4 +33,5 @@ https://reactsvgicons.com/react-svg-iconsets   - иконки react(svg)
 https://tproger.ru/articles/principy-solid-python?ysclid=lqqwlxpio6340700304 - pattern в PYTHON
 
 https://questu.ru/articles/254359/?ysclid=lqv9c6b6ce980048864  - об регистрации пользователя на сайте
+https://djangodoc.ru/3.2/topics/auth/default/?ysclid=lqv94ddxyg536143048  тоже про авторизацию и аутентификацию
 
