--- a/readme
+++ b/readme
@@ -40,3 +40,4 @@ https://proproprogs.ru/django4/django4-dekorator-login-required-i-klass-loginreq
 "editor.formatOnSave": false
 }
 ///этот код добавить в settingf.json VScode
+https://proproprogs.ru/django/  - интересные материалы по django
