--- a/readme
+++ b/readme
@@ -41,3 +41,5 @@ https://proproprogs.ru/django4/django4-dekorator-login-required-i-klass-loginreq
 }
 ///этот код добавить в settingf.json VScode
 https://proproprogs.ru/django/  - интересные материалы по django
+https://www.geeksforgeeks.org/top-django-packages/   10 самых необходимых пакетов django
+
