--- a/readme
+++ b/readme
@@ -43,3 +43,5 @@ https://proproprogs.ru/django4/django4-dekorator-login-required-i-klass-loginreq
 https://proproprogs.ru/django/  - интересные материалы по django
 https://www.geeksforgeeks.org/top-django-packages/   10 самых необходимых пакетов django
 
+https://docs.djangoproject.com/en/4.2/ref/models/fields/   - свойства полей модели
+
