--- a/readme
+++ b/readme
@@ -44,4 +44,5 @@ https://proproprogs.ru/django/  - интересные материалы по d
 https://www.geeksforgeeks.org/top-django-packages/   10 самых необходимых пакетов django
 
 https://docs.djangoproject.com/en/4.2/ref/models/fields/   - свойства полей модели
+https://djangodoc.ru/3.2/ref/models/querysets/#field-lookups - filtrация набора QuerySet:  QuerySet.filter(...)
 
