--- a/readme
+++ b/readme
@@ -50,4 +50,7 @@ https://proproprogs.ru/django4/django4-rasshirenie-modeli-user-klass-abstractuse
 https://youtu.be/M2XZqlX7ao4?si=E0DtMCKHfb0FYEAL  - курс по django
 https://icon666.com/ru/icon/vojdite_v_sistemu_6lleuuose148 - иконки svg
 
+https://developer.mozilla.org/ru/docs/Learn/Server-side/Django/Authentication#%D1%82%D0%B5%D1%81%D1%82%D0%B8%D1%80%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5_%D0%BF%D1%80%D0%BE%D0%B2%D0%B5%D1%80%D0%BA%D0%B8_%D0%BF%D0%BE%D0%B4%D0%BB%D0%B8%D0%BD%D0%BD%D0%BE%D1%81%D1%82%D0%B8_%D0%BF%D0%BE%D0%BB%D1%8C%D0%B7%D0%BE%D0%B2%D0%B0%D1%82%D0%B5%D0%BB%D0%B5%D0%B9  - проверка авторизован ли пользователь
+
+
 
