--- a/readme
+++ b/readme
@@ -54,5 +54,7 @@ https://developer.mozilla.org/ru/docs/Learn/Server-side/Django/Authentication#%D
 
 https://djangodoc.ru/3.2/topics/auth/customizing/?ysclid=lr9iofdr754576955#authorization-methods - проверка аутентификации пользователя
 
+https://design-hero.ru/articles/6787/ -websockets в django
+
 
 
