--- a/readme
+++ b/readme
@@ -56,6 +56,8 @@ https://djangodoc.ru/3.2/topics/auth/customizing/?ysclid=lr9iofdr754576955#autho
 
 https://design-hero.ru/articles/6787/ -websockets в django
 
+https://habr.com/ru/articles/568198/  - про представления га классах
+
 ///////////////////////////////////////////////////////////////////////////////////////////////////////////////
 Set up GitHub Copilot
 
