--- a/readme
+++ b/readme
@@ -58,6 +58,7 @@ https://design-hero.ru/articles/6787/ -websockets в django
 
 https://habr.com/ru/articles/568198/  - про представления га классах
 https://www.npmjs.com/package/js-datepicker#examples   datepicker
+https://evileg.com/ru/post/455/  - пример formSet
 
 ///////////////////////////////////////////////////////////////////////////////////////////////////////////////
 Set up GitHub Copilot
