--- a/readme
+++ b/readme
@@ -62,6 +62,8 @@ https://evileg.com/ru/post/455/  - пример formSet
 
 https://www.letscodemore.com/blog/django-inline-formset-factory-with-examples/ -ещё один пример formset про фотогаллерею к продукту
 
+https://ccbv.co.uk/  - представления на основе классов
+
 ///////////////////////////////////////////////////////////////////////////////////////////////////////////////
 Set up GitHub Copilot
 
