--- a/readme
+++ b/readme
@@ -70,6 +70,7 @@ https://www.npmjs.com/package/js-datepicker#examples   datepicker
 https://evileg.com/ru/post/455/  - пример formSet
 https://www.letscodemore.com/blog/django-inline-formset-factory-with-examples/ -ещё один пример formset про фотогаллерею к продукту
 https://django.fun/docs/django/5.0/topics/forms/formsets/ - интересно про формсет
+https://russianblogs.com/article/2539272186/- про формсет
 https://ccbv.co.uk/  - представления на основе классов
 ///////////////////////////////////////////////////////////////////////////////////////////////////////////////
 Set up GitHub Copilot
