--- a/readme
+++ b/readme
@@ -72,7 +72,11 @@ https://www.letscodemore.com/blog/django-inline-formset-factory-with-examples/ -
 https://django.fun/docs/django/5.0/topics/forms/formsets/ - интересно про формсет
 https://russianblogs.com/article/2539272186/- про формсет
 https://ccbv.co.uk/  - представления на основе классов
-///////////////////////////////////////////////////////////////////////////////////////////////////////////////
+/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+//Сигналы   /////////////////////////////////////////////////////////////////////////////////////////////////////////////
+https://russianblogs.com/article/4399514519/  
+/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
 Set up GitHub Copilot
 
 Use GitHub's AI pair programmer to autocomplete suggestions as you code.
