--- a/readme
+++ b/readme
@@ -36,7 +36,7 @@ https://proproprogs.ru/django/podklyuchenie-staticheskih-faylov-filtry-shablonov
 https://djbook.ru/rel3.0/ref/templates/builtins.html#ref-templates-builtins-filters - фильтры вывода переменных в шаблонах
 https://proproprogs.ru/django/podklyuchenie-staticheskih-faylov-filtry-shablonov - видео обучающее по django
 
-https://reactsvgicons.com/react-svg-iconsets   - иконки react(svg)
+https://icon-icons.com/  - иконки (svg)
 https://tproger.ru/articles/principy-solid-python?ysclid=lqqwlxpio6340700304 - pattern в PYTHON
 
 https://questu.ru/articles/254359/?ysclid=lqv9c6b6ce980048864  - об регистрации пользователя на сайте
